@@ -7,25 +7,25 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.24 (gritter) 8/2/06";
+	"@(#)/usr/ucb/otfdump.sl	7.25 (gritter) 8/3/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.24 (gritter) 8/2/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.24 (gritter) 8/2/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.25 (gritter) 8/3/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.25 (gritter) 8/3/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.24 (gritter) 8/2/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.25 (gritter) 8/3/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.24 (gritter) 8/2/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.25 (gritter) 8/3/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.24";
+const char revision[] = "7.25";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.65 (gritter) 8/2/06
+ext.h: * Sccsid @(#)ext.h	1.66 (gritter) 8/3/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.88 (gritter) 7/29/06
 n2.c: * Sccsid @(#)n2.c	1.25 (gritter) 7/30/06
 n3.c: * Sccsid @(#)n3.c	1.120 (gritter) 8/2/06
-n4.c: * Sccsid @(#)n4.c	1.41 (gritter) 8/2/06
-n5.c: * Sccsid @(#)n5.c	1.64 (gritter) 7/30/06
+n4.c: * Sccsid @(#)n4.c	1.42 (gritter) 8/3/06
+n5.c: * Sccsid @(#)n5.c	1.65 (gritter) 8/3/06
 n7.c: * Sccsid @(#)n7.c	1.80 (gritter) 7/30/06
 n8.c: * Sccsid @(#)n8.c	1.31 (gritter) 7/29/06
 n9.c: * Sccsid @(#)n9.c	1.54 (gritter) 8/2/06
